deploy/kubernetes/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
spec:
  type: ClusterIP
  selector:
    app: portfolio-fabricio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30087
